Cleaning up database to api pipeline
