# server/src/main.rs
@@ -23,57 +23,7 @@
 #[macro_use]
 extern crate rocket;
 
-use config_env::Configuration;
-
-use rocket::{
-    build,
-    serde::{json::Json, Deserialize, Serialize},
-    State,
-};
-
-use sea_orm::*;
-
-use rocket::futures::executor;
-
-use db::entities::prelude::User;
-
-#[derive(Serialize, Deserialize)]
-#[serde(crate = "rocket::serde")]
-struct UserResponse {
-    id: i32,
-    username: String,
-}
-
-#[get("/")]
-async fn index(connection: &State<DatabaseConnection>) -> Json<Vec<UserResponse>> {
-    // Json(UserResponse {
-    //     id: 1,
-    //     username: "admin".to_owned(),
-    // })
-
-    let connection = connection as &DatabaseConnection;
-
-    let users = User::find()
-        .all(connection)
-        .await
-        .unwrap()
-        .into_iter()
-        .map(|row| UserResponse {
-            id: row.id,
-            username: row.username,
-        })
-        .collect::<Vec<UserResponse>>();
-
-    Json(users)
-}
-
 #[launch]
 fn rocket() -> _ {
-    let configuration =
-        Configuration::new().expect("unable to load configuration from environment");
-
-    let connection = executor::block_on(Database::connect(configuration.database_url))
-        .expect("unable to connect to database");
-
-    build().manage(connection).mount("/", routes![index])
+    server_routes::rocket(server_routes::connect_db().expect("unable to connect to database"))
 }
